[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/level_obyvak.gd" type="Script" id=1]
[ext_resource path="res://assets/GFX/Items/peněženka malá.png" type="Texture" id=2]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/obyvak.jpg-19a5fdf4ffaceb097ced4df8a9c4684a.stex"

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/dvere_obyvak.png-fbd0084df0afe92ee431c7339df2a1cb.stex"

[sub_resource type="StreamTexture" id=3]
flags = 4
load_path = "res://.import/notebook.png-24d4635c8e39c69d0a71cc27c088292f.stex"

[node name="Level_obyvak" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="TextureButton" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 119.351
margin_top = 220.51
margin_right = -1484.65
margin_bottom = -337.49
texture_normal = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Notebook" type="TextureButton" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1527.75
margin_top = 415.31
margin_right = -178.254
margin_bottom = -519.69
texture_normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wallet" type="TextureButton" parent="."]
margin_left = 718.0
margin_top = 704.0
margin_right = 1098.0
margin_bottom = 995.0
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Background/Door" to="." method="_on_door_pressed"]
[connection signal="pressed" from="Background/Notebook" to="." method="_on_notebook_pressed"]
[connection signal="pressed" from="Wallet" to="." method="_on_Wallet_pressed"]
